--- a/demo/Assests/CHLocalizable.strings
+++ b/demo/Assests/CHLocalizable.strings
@@ -264,7 +264,7 @@
 "pmYearsAgo" = "%@ years ago";
 "pmOneYearAgo" = "1 Year Ago";
 "pmLastYear" = "Last Year";
-"pmMonthsAgo" = "%@ months ago";
+"pmOneMonthAgo" = "%@ months ago";
 "pmOneMonthAgo" = "1 Month Ago";
 "pmLastMonth" = "Last Month";
 "pmWeeksAgo" = "%@ weeks ago";
@@ -303,3 +303,21 @@
 "pmUserBlockCallError" = "User is blocked. You can't make a call.";
 "pmUserHasBlockCallError" = "You can't make a call.";
 "pmDeleteForMe" = "Delete for me";
+"pmNoGroupFound" = "No conversations yet. Start a new one by tapping on '+' icon.";
+"pmNoContactFound" = "No contacts found. To enjoy messaging, get connected with community members.";
+"pmNoContactsToAdd" = "No contacts to select.";
+"pmStartNewCall" = "Start a Call";
+"pmConversations" = "Conversations";
+"pmNewMessage" = "New Message";
+"pmMembers" = "Members";
+"pmEditGroupTitle" = "Edit Group Title";
+"pmSharePhotos" = "Share Photos";
+"pmShareVideos" = "Share Video";
+"pmShareDocuments" = "Share Document";
+"pmShareLocation" = "Share Location";
+"pmShareStickersGifs" = "Share Stickers and GIFs";
+"pmDarkTheme" = "Dark Theme";
+"pmLeaveConversation" = "Leave Conversation";
+"pmCamera" = "Camera";
+"pmGallery" = "Gallery";
+"pmGroupsInCommon" = "Groups in Common";
